--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -23,7 +23,7 @@
 
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="">Adicionar Promoção</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/promocao/add}">Adicionar Promoção</a></li>
                 <li class="nav-item"><a class="nav-link" href="">Promoções</a></li>
                 <li class="nav-item"><a class="nav-link" href="">Tabela de Promoções</a></li>
             </ul>
@@ -44,6 +44,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
 
 <!-- 	MEUS JS -->
-<script></script>
+<script th:replace=":: js"></script>
 </body>
 </html>
