--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -42,6 +42,12 @@
     </div>
 </main>
 
+
+<!-- DWR AJAX -->
+<script type='text/javascript' th:src=@{/dwr/engine.js}></script>
+<script type='text/javascript' th:src=@{/dwr/interface/DWRAlertPromocoes.js}></script>
+<script type='text/javascript' th:src=@{/dwr/util.js}></script>
+
 <!-- JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
@@ -53,6 +59,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment-with-locales.min.js" integrity="sha512-EATaemfsDRVs6gs1pHbvhc6+rKFGv8+w4Wnxk4LmkC0fzdVoyWb+Xtexfrszd1YuUMBEhucNuorkf8LpFBhj6w==" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/buttons/1.6.4/js/dataTables.buttons.min.js"></script>
 <!-- 	MEUS JS -->
-<script th:replace=":: js"></script>
+<script th:replace=":: js" ></script>
 </body>
 </html>
